--- a/playground/package.json
+++ b/playground/package.json
@@ -20,8 +20,6 @@
   },
   "dependencies": {
     "@ark-ui/react": "0.15.0",
-    "@babel/parser": "^7.22.7",
-    "@babel/traverse": "^7.23.2",
     "@monaco-editor/react": "4.5.2",
     "@pandacss/config": "workspace:*",
     "@pandacss/generator": "workspace:*",
@@ -33,7 +31,7 @@
     "hookable": "5.5.3",
     "merge-anything": "5.1.7",
     "monaco-editor": "0.40.0",
-    "monaco-jsx-highlighter": "^2.0.4",
+    "monaco-jsx-syntax-highlight": "^1.2.0",
     "nanoid": "4.0.2",
     "next": "14.0.3",
     "next-themes": "^0.2.1",
