--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -68,7 +68,8 @@
     "@pandacss/types": "workspace:*",
     "cac": "6.7.14",
     "pathe": "1.1.1",
-    "perfect-debounce": "^1.0.0"
+    "perfect-debounce": "^1.0.0",
+    "ts-pattern": "5.0.5"
   },
   "devDependencies": {
     "@types/update-notifier": "6.0.8",
