--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -34,13 +34,10 @@
     "base.css"
   ],
   "dependencies": {
-    "@pandacss/postcss": "workspace:*",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.31",
-    "postcss-load-config": "^4.0.1"
+    "@pandacss/postcss": "workspace:*"
   },
   "devDependencies": {
-    "astro": "2.10.15",
+    "astro": "4.0.3",
     "vite": "^4.4.8"
   },
   "peerDependencies": {
