--- a/sandbox/astro/package.json
+++ b/sandbox/astro/package.json
@@ -14,12 +14,12 @@
     "css:dev": "panda -w"
   },
   "dependencies": {
-    "@astrojs/solid-js": "2.2.1",
-    "astro": "2.10.15",
+    "@astrojs/solid-js": "3.0.2",
+    "astro": "4.0.3",
     "solid-js": "1.7.11"
   },
   "devDependencies": {
-    "@pandacss/dev": "workspace:*",
-    "@pandacss/astro": "workspace:*"
+    "@pandacss/astro": "workspace:*",
+    "@pandacss/dev": "workspace:*"
   }
 }
