--- a/sandbox/vite-ts/package.json
+++ b/sandbox/vite-ts/package.json
@@ -22,13 +22,13 @@
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
     "@pandacss/studio": "workspace:*",
-    "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15",
-    "@vitejs/plugin-react": "4.0.4",
+    "@types/react": "18.2.42",
+    "@types/react-dom": "18.2.17",
+    "@vitejs/plugin-react": "4.2.1",
     "postcss": "^8.4.31",
     "source-map-explorer": "^2.5.3",
-    "typescript": "5.2.2",
-    "vite": "4.0.5",
-    "vite-bundle-visualizer": "^0.9.0"
+    "typescript": "5.3.3",
+    "vite": "5.0.7",
+    "vite-bundle-visualizer": "0.11.0"
   }
 }
