--- a/website/package.json
+++ b/website/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
+    "@pandacss/postcss": "workspace:^",
     "@types/react": "^18.2.42",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.31",
