refactor(fixtures): use dev alias and rm deps across workspace packages
https://github.com/chakra-ui/panda/pull/1544/commits/55ff12544c28eb9ce7d7e0a9bd83be7eb1ed168b

--- a/packages/fixture/package.json
+++ b/packages/fixture/package.json
@@ -2,7 +2,7 @@
   "name": "@pandacss/fixture",
   "version": "0.23.0",
   "private": true,
-  "description": "Test fixtures for css panda",
+  "description": "Test fixtures for Panda CSS",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
