--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@pandacss/error": "workspace:*",
+    "@pandacss/is-valid-prop": "workspace:^",
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
