--- a/packages/extractor/tsconfig.json
+++ b/packages/extractor/tsconfig.json
@@ -1,8 +1,4 @@
 {
   "extends": "../../tsconfig.json",
-  "include": ["src", "index.ts"],
-  "exclude": ["node_modules", "./__tests__/npm-bench", "./__tests__/samples"],
-  "compilerOptions": {
-    "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo"
-  }
+  "include": ["src", "index.ts"]
 }
