--- a/packages/fixture/package.json
+++ b/packages/fixture/package.json
@@ -1,35 +1,22 @@
 {
   "name": "@pandacss/fixture",
-  "version": "0.22.1",
+  "version": "0.19.0",
   "private": true,
   "description": "Test fixtures for css panda",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
-  "exports": {
-    ".": {
-      "source": "./src/index.ts",
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.js",
-      "import": {
-        "types": "./dist/index.d.mts",
-        "default": "./dist/index.mjs"
-      }
-    },
-    "./package.json": "./package.json"
-  },
-  "scripts": {
-    "build": "tsup src/index.ts --format=esm,cjs --dts",
-    "build-fast": "tsup src/index.ts --format=esm,cjs --no-dts",
-    "dev": "pnpm build-fast --watch"
-  },
-  "files": [
-    "dist"
-  ],
-  "dependencies": {
+  "devDependencies": {
+    "@pandacss/config": "workspace:^",
+    "@pandacss/core": "workspace:^",
+    "@pandacss/generator": "workspace:^",
+    "@pandacss/node": "workspace:^",
     "@pandacss/preset-base": "workspace:*",
     "@pandacss/preset-panda": "workspace:*",
-    "@pandacss/types": "workspace:*"
+    "@pandacss/shared": "workspace:^",
+    "@pandacss/token-dictionary": "workspace:^",
+    "@pandacss/types": "workspace:*",
+    "hookable": "5.5.3",
+    "postcss": "^8.4.27"
   }
 }
