--- a/packages/astro/package.json
+++ b/packages/astro/package.json
@@ -12,6 +12,12 @@
     "dev": "pnpm build-fast --watch"
   },
   "sideEffects": false,
+  "homepage": "https://panda-css.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chakra-ui/panda.git",
+    "directory": "packages/astro"
+  },
   "publishConfig": {
     "access": "public"
   },
