--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -18,6 +18,12 @@
   },
   "author": "Segun Adebayo <joseshegs@gmail.com>",
   "sideEffects": false,
+  "homepage": "https://panda-css.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chakra-ui/panda.git",
+    "directory": "packages/parser"
+  },
   "publishConfig": {
     "access": "public"
   },
