--- a/packages/preset-open-props/package.json
+++ b/packages/preset-open-props/package.json
@@ -7,6 +7,12 @@
   "types": "dist/index.d.ts",
   "author": "Abraham Aremu <anubra266@gmail.com>",
   "sideEffects": false,
+  "homepage": "https://panda-css.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chakra-ui/panda.git",
+    "directory": "packages/preset-open-props"
+  },
   "publishConfig": {
     "access": "public"
   },
