--- a/packages/error/package.json
+++ b/packages/error/package.json
@@ -7,6 +7,12 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "sideEffects": false,
+  "homepage": "https://panda-css.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chakra-ui/panda.git",
+    "directory": "packages/error"
+  },
   "publishConfig": {
     "access": "public"
   },
