chore: update snapshots/lock/json after rebase

--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -38,6 +38,7 @@
   ],
   "dependencies": {
     "@pandacss/core": "workspace:*",
+    "@pandacss/is-valid-prop": "workspace:^",
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
