fix: playground after changes

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -9,8 +9,9 @@
     "downlevelIteration": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
+    "customConditions": ["source"],
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
