chore: fix playground build

--- a/playground/tsconfig.json
+++ b/playground/tsconfig.json
@@ -9,9 +9,8 @@
     "downlevelIteration": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "moduleResolution": "Bundler",
-    "module": "ESNext",
-    "customConditions": ["source"],
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
