--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -56,7 +56,7 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "pnpm tsup src/index.ts src/merge-config.ts src/resolve-ts-path-pattern.ts --format=esm,cjs --shims --dts",
+    "build": "pnpm tsup --tsconfig tsconfig.build.json src/index.ts src/merge-config.ts src/resolve-ts-path-pattern.ts --format=esm,cjs --shims --dts",
     "build-fast": "pnpm tsup src/index.ts src/merge-config.ts src/resolve-ts-path-pattern.ts --format=esm,cjs --shims --no-dts",
     "dev": "pnpm build-fast --watch"
   },
