--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,6 +45,7 @@
     "@pandacss/types": "workspace:*",
     "autoprefixer": "10.4.15",
     "hookable": "5.5.3",
+    "lightningcss": "^1.22.1",
     "lodash.merge": "4.6.2",
     "postcss": "^8.4.31",
     "postcss-discard-duplicates": "^6.0.0",
