--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -44,6 +44,7 @@
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
     "autoprefixer": "10.4.15",
+    "browserslist": "^4.22.2",
     "hookable": "5.5.3",
     "lightningcss": "^1.22.1",
     "lodash.merge": "4.6.2",
