--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -47,6 +47,7 @@
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
+    "browserslist": "^4.22.2",
     "chokidar": "^3.5.3",
     "fast-glob": "^3.3.1",
     "file-size": "^1.0.0",
