--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -67,8 +67,7 @@
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
     "cac": "6.7.14",
-    "pathe": "1.1.1",
-    "perfect-debounce": "^1.0.0"
+    "pathe": "1.1.1"
   },
   "devDependencies": {
     "@types/update-notifier": "6.0.8",
