--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -59,6 +59,7 @@
     "look-it-up": "2.1.0",
     "outdent": " ^0.8.0",
     "pathe": "^1.1.1",
+    "perfect-debounce": "^1.0.0",
     "pkg-types": "1.0.3",
     "pluralize": "8.0.0",
     "postcss": "^8.4.31",
