--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -38,13 +38,14 @@
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "@vue/compiler-sfc": "^3.3.4",
-    "magic-string": "^0.30.2",
+    "@vue/compiler-sfc": "3.3.4",
+    "magic-string": "0.30.2",
     "ts-morph": "19.0.0",
     "ts-pattern": "5.0.5"
   },
   "devDependencies": {
     "@pandacss/generator": "workspace:*",
+    "@vue/compiler-core": "3.3.4",
     "hookable": "5.5.3"
   },
   "files": [
