--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,10 @@
     "module": "ESNext",
     "customConditions": ["source"]
   },
-  "include": ["packages"],
+  "include": ["packages/**/*.ts"],
   "types": ["vitest/globals"],
   "exclude": [
     "node_modules",
-    "./packages/cli/app",
     "./packages/extractor/__tests__/npm-bench",
     "./packages/extractor/__tests__/samples",
     "./packages/config/__tests__/samples"
