--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -56,8 +56,8 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "pnpm tsup src/index.ts src/merge-config.ts src/diff-config.ts src/resolve-ts-path-pattern.ts --format=esm,cjs --shims --dts",
-    "build-fast": "pnpm tsup src/index.ts src/merge-config.ts src/diff-config.ts src/resolve-ts-path-pattern.ts --format=esm,cjs --shims --no-dts",
+    "build": "pnpm tsup --dts",
+    "build-fast": "pnpm tsup --no-dts",
     "dev": "pnpm build-fast --watch"
   },
   "files": [
