--- a/packages/node/tsconfig.json
+++ b/packages/node/tsconfig.json
@@ -1,4 +1,10 @@
 {
   "extends": "../../tsconfig.build.json",
-  "include": ["src"]
+  "include": ["src", "__tests__"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@pandacss/fixture": ["../fixture/src/index.ts"]
+    }
+  }
 }
