--- a/playground/package.json
+++ b/playground/package.json
@@ -45,6 +45,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-live-runner": "^1.0.5",
+    "sucrase": "^3.35.0",
     "ts-pattern": "5.0.5",
     "typescript": "5.3.3",
     "usehooks-ts": "2.9.1",
