--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,29 @@
 {
   "root": true,
-  "ignorePatterns": ["*.d.ts", "*.js", "*.cjs", "node_modules/**/*", "dist/**/*", "coverage/**/*"],
+  "ignorePatterns": [
+    "*.d.ts",
+    "*.js",
+    "*.cjs",
+    "node_modules/**/*",
+    "dist/**/*",
+    "coverage/**/*"
+  ],
   "parser": "@typescript-eslint/parser",
-  "plugins": ["@typescript-eslint"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:@typescript-eslint/stylistic"],
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:@typescript-eslint/stylistic"
+  ],
   "env": {
     "node": true,
     "browser": true
   },
   "rules": {
     "no-prototype-builtins": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
