--- a/playground/package.json
+++ b/playground/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "5.1.0",
     "@textea/json-viewer": "3.2.3",
     "hookable": "5.5.3",
+    "lightningcss-wasm": "^1.22.1",
     "merge-anything": "5.1.7",
     "monaco-editor": "0.40.0",
     "monaco-editor-auto-typings": "^0.4.5",
