refactor: extract imports

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -46,6 +46,7 @@
     "autoprefixer": "10.4.15",
     "hookable": "5.5.3",
     "lodash.merge": "4.6.2",
+    "outdent": " ^0.8.0",
     "postcss": "^8.4.31",
     "postcss-discard-duplicates": "^6.0.0",
     "postcss-discard-empty": "^6.0.0",
