--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@pandacss/config": "workspace:^",
+    "@pandacss/core": "workspace:^",
     "@pandacss/extractor": "workspace:*",
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
