--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -50,7 +50,6 @@
     "ts-pattern": "5.0.5"
   },
   "devDependencies": {
-    "@types/pluralize": "0.0.33",
-    "hookable": "5.5.3"
+    "@types/pluralize": "0.0.33"
   }
 }
