--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "prepare": "ncp node_modules/csstype/index.d.ts src/csstype.d.ts",
     "dev": "tsx scripts/watch.ts",
-    "build": "PANDA_BUILD=1 tsx scripts/postbuild.ts && tsx scripts/build.ts"
+    "build": "cross-env PANDA_BUILD=1 tsx scripts/postbuild.ts && tsx scripts/build.ts"
   },
   "sideEffects": false,
   "homepage": "https://panda-css.com",
@@ -32,6 +32,7 @@
   ],
   "devDependencies": {
     "@pandacss/extractor": "workspace:*",
+    "cross-env": "^7.0.3",
     "csstype": "3.1.3",
     "hookable": "5.5.3",
     "ncp": "^2.0.0",
