--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "prepare": "panda codegen",
-    "dev": "rm -rf .next && next dev",
+    "dev": "rimraf .next && next dev",
     "build": "next build",
     "start": "next start"
   },
