--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -66,8 +66,7 @@
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "cac": "6.7.14",
-    "pathe": "1.1.2"
+    "cac": "6.7.14"
   },
   "devDependencies": {
     "@types/update-notifier": "6.0.8",
