feat: allow token references in media queries, escape them if not found refactor: unify the token expansion logic, move it to JS instead of relying on a postcss plugin

--- a/packages/token-dictionary/package.json
+++ b/packages/token-dictionary/package.json
@@ -37,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "@pandacss/logger": "workspace:^",
     "@pandacss/shared": "workspace:*",
     "@pandacss/types": "workspace:*",
     "ts-pattern": "5.0.5"
