--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.1",
     "@typescript-eslint/parser": "6.2.1",
+    "@typescript-eslint/rule-tester": "^6.19.1",
     "eslint": "^8.54.0",
     "eslint-config-prettier": "^8.9.0",
     "prettier": "^2.8.8"
