--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -32,6 +32,7 @@
   ],
   "devDependencies": {
     "@pandacss/extractor": "workspace:*",
+    "@pandacss/token-dictionary": "workspace:^",
     "csstype": "3.1.3",
     "microdiff": "^1.3.2",
     "ncp": "^2.0.0",
