--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "incremental": true,
     "tsBuildInfoFile": "node_modules/.cache/.tsbuildinfo",
     "paths": {
-      "@pandacss/fixture": ["./packages/fixture/src/index.ts"]
+      "@pandacss/fixture": ["./packages/fixture/src/index.ts"],
+      "@pandacss/types": ["./packages/types/src/index.ts"]
     }
   },
   "include": ["packages/**/*.ts"],
