refactor: create logger when needed, rm singleton

--- a/packages/astro-plugin-studio/package.json
+++ b/packages/astro-plugin-studio/package.json
@@ -37,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "@pandacss/logger": "workspace:^",
     "@pandacss/node": "workspace:*",
     "javascript-stringify": "2.1.0"
   },
