--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -37,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "@pandacss/logger": "workspace:^",
     "@pandacss/node": "workspace:*",
     "postcss": "^8.4.31"
   }
