--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -37,8 +37,7 @@
     "dist"
   ],
   "dependencies": {
-    "kleur": "^4.1.5",
-    "lil-fp": "1.4.5"
+    "kleur": "^4.1.5"
   },
   "devDependencies": {
     "matcher": "5.0.0"
