--- a/packages/token-dictionary/package.json
+++ b/packages/token-dictionary/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@pandacss/logger": "workspace:^",
     "@pandacss/shared": "workspace:*",
+    "@pandacss/types": "workspace:*",
     "ts-pattern": "5.0.5"
   }
 }
