test: add postcss tests

--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -39,5 +39,9 @@
   "dependencies": {
     "@pandacss/node": "workspace:*",
     "postcss": "^8.4.31"
+  },
+  "devDependencies": {
+    "@pandacss/dev": "workspace:*",
+    "@pandacss/logger": "workspace:*"
   }
 }
