--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -69,11 +69,11 @@
     "@pandacss/preset-panda": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "bundle-n-require": "^1.1.0",
+    "bundle-n-require": "1.1.1",
     "escalade": "3.1.1",
-    "merge-anything": "^5.1.7",
-    "microdiff": "^1.3.2",
-    "typescript": "^5.3.3"
+    "merge-anything": "5.1.7",
+    "microdiff": "1.3.2",
+    "typescript": "5.3.3"
   },
   "devDependencies": {
     "pkg-types": "1.0.3"
