chore: fix versions

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,26 +37,26 @@
     "access": "public"
   },
   "dependencies": {
-    "@csstools/postcss-cascade-layers": "^4.0.2",
+    "@csstools/postcss-cascade-layers": "4.0.2",
     "@pandacss/is-valid-prop": "workspace:^",
     "@pandacss/logger": "workspace:*",
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
     "autoprefixer": "10.4.17",
-    "browserslist": "^4.23.0",
+    "browserslist": "4.23.0",
     "hookable": "5.5.3",
-    "lightningcss": "^1.23.0",
+    "lightningcss": "1.23.0",
     "lodash.merge": "4.6.2",
-    "outdent": " ^0.8.0",
-    "postcss": "^8.4.35",
-    "postcss-discard-duplicates": "^6.0.1",
-    "postcss-discard-empty": "^6.0.1",
-    "postcss-merge-rules": "^6.0.3",
-    "postcss-minify-selectors": "^6.0.2",
+    "outdent": "0.8.0",
+    "postcss": "8.4.35",
+    "postcss-discard-duplicates": "6.0.1",
+    "postcss-discard-empty": "6.0.1",
+    "postcss-merge-rules": "6.0.1",
+    "postcss-minify-selectors": "6.0.2",
     "postcss-nested": "6.0.1",
-    "postcss-normalize-whitespace": "^6.0.1",
-    "postcss-selector-parser": "^6.0.15",
+    "postcss-normalize-whitespace": "6.0.1",
+    "postcss-selector-parser": "6.0.15",
     "ts-pattern": "5.0.8"
   },
   "devDependencies": {
