--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
   "dependencies": {
     "@changesets/changelog-github": "0.5.0",
     "@changesets/cli": "2.27.1",
-    "chokidar": "^3.6.0",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "happy-dom": "^13.3.8",
+    "chokidar": "3.6.0",
+    "concurrently": "8.2.2",
+    "cross-env": "7.0.3",
+    "happy-dom": "13.3.8",
     "husky": "9.0.11",
     "lint-staged": "15.2.2",
-    "mdx-local-link-checker": "^2.1.1",
-    "rimraf": "^5.0.5",
+    "mdx-local-link-checker": "2.1.1",
+    "rimraf": "5.0.5",
     "ts-morph": "21.0.1",
     "tsup": "8.0.2",
     "tsx": "4.7.1",
@@ -56,9 +56,9 @@
     "@types/node": "20.11.19",
     "@typescript-eslint/eslint-plugin": "7.0.1",
     "@typescript-eslint/parser": "7.0.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "prettier": "^2.8.8"
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "prettier": "2.8.8"
   },
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
