--- a/packages/logger/package.json
+++ b/packages/logger/package.json
@@ -38,7 +38,7 @@
   ],
   "dependencies": {
     "@pandacss/types": "workspace:*",
-    "kleur": "^4.1.5"
+    "kleur": "4.1.5"
   },
   "devDependencies": {
     "matcher": "5.0.0"
