--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -38,7 +38,7 @@
   ],
   "dependencies": {
     "@pandacss/node": "workspace:*",
-    "postcss": "^8.4.35"
+    "postcss": "8.4.35"
   },
   "devDependencies": {
     "@pandacss/logger": "workspace:*"
