--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -33,8 +33,8 @@
   "devDependencies": {
     "@pandacss/extractor": "workspace:*",
     "csstype": "3.1.3",
-    "microdiff": "^1.3.2",
-    "ncp": "^2.0.0",
+    "microdiff": "1.3.2",
+    "ncp": "2.0.0",
     "pkg-types": "1.0.3"
   }
 }
