--- a/playground/package.json
+++ b/playground/package.json
@@ -28,14 +28,14 @@
     "@pandacss/preset-panda": "workspace:*",
     "@prisma/client": "5.9.1",
     "@textea/json-viewer": "3.4.0",
-    "lightningcss-wasm": "^1.23.0",
+    "lightningcss-wasm": "1.23.0",
     "merge-anything": "5.1.7",
     "monaco-editor": "0.46.0",
-    "monaco-editor-auto-typings": "^0.4.5",
-    "monaco-jsx-syntax-highlight": "^1.2.0",
+    "monaco-editor-auto-typings": "0.4.5",
+    "monaco-jsx-syntax-highlight": "1.2.0",
     "nanoid": "5.0.5",
     "next": "14.1.0",
-    "next-themes": "^0.2.1",
+    "next-themes": "0.2.1",
     "os-browserify": "0.3.0",
     "outdent": " ^0.8.0",
     "path-browserify": "1.0.1",
@@ -43,8 +43,8 @@
     "prisma": "5.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-live-runner": "^1.0.5",
-    "sucrase": "^3.35.0",
+    "react-live-runner": "1.0.5",
+    "sucrase": "3.35.0",
     "ts-pattern": "5.0.8",
     "typescript": "5.3.3",
     "usehooks-ts": "2.14.0",
@@ -52,15 +52,15 @@
     "zod": "3.22.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^14.1.0",
+    "@next/bundle-analyzer": "14.1.0",
     "@pandacss/dev": "workspace:*",
     "@pandacss/types": "workspace:*",
     "@types/prettier": "2.7.3",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
-    "dts-bundle-generator": "^9.3.1",
+    "dts-bundle-generator": "9.3.1",
     "eslint-config-next": "14.1.0",
-    "raw-loader": "^4.0.2",
+    "raw-loader": "4.0.2",
     "tsx": "4.7.1"
   }
 }
