--- a/sandbox/codegen/package.json
+++ b/sandbox/codegen/package.json
@@ -14,34 +14,34 @@
   },
   "dependencies": {
     "@pandacss/dev": "workspace:^",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.4.5",
+    "@builder.io/qwik": "1.4.5",
     "@preact/preset-vite": "2.8.1",
-    "@solidjs/testing-library": "^0.8.6",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/preact": "^3.2.3",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/vue": "^8.0.2",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@solidjs/testing-library": "0.8.6",
+    "@testing-library/jest-dom": "6.4.2",
+    "@testing-library/preact": "3.2.3",
+    "@testing-library/react": "14.2.1",
+    "@testing-library/vue": "8.0.2",
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "@vitejs/plugin-react-swc": "3.6.0",
+    "@vitejs/plugin-vue": "5.0.4",
+    "@vitejs/plugin-vue-jsx": "3.1.0",
     "cac": "6.7.14",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "happy-dom": "^13.3.8",
-    "jsdom": "^24.0.0",
-    "preact": "^10.19.5",
-    "solid-js": "^1.8.15",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.5",
+    "happy-dom": "13.3.8",
+    "jsdom": "24.0.0",
+    "preact": "10.19.5",
+    "solid-js": "1.8.15",
     "tsx": "4.7.1",
-    "typescript": "^5.3.3",
+    "typescript": "5.3.3",
     "vite": "5.1.3",
-    "vite-plugin-solid": "^2.10.1",
+    "vite-plugin-solid": "2.10.1",
     "vitest": "1.3.0",
-    "vue": "^3.4.19"
+    "vue": "3.4.19"
   }
 }
