--- a/sandbox/preact-ts/package.json
+++ b/sandbox/preact-ts/package.json
@@ -11,7 +11,7 @@
     "css:dev": "PANDA_DEBUG=* panda -w"
   },
   "dependencies": {
-    "preact": "^10.19.5"
+    "preact": "10.19.5"
   },
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
