--- a/sandbox/qwik-ts/package.json
+++ b/sandbox/qwik-ts/package.json
@@ -21,10 +21,10 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.4.5",
-    "@builder.io/qwik-city": "^1.4.5",
+    "@builder.io/qwik": "1.4.5",
+    "@builder.io/qwik-city": "1.4.5",
     "@pandacss/dev": "workspace:*",
-    "eslint-plugin-qwik": "^1.4.5",
+    "eslint-plugin-qwik": "1.4.5",
     "typescript": "5.3.3",
     "undici": "6.6.2",
     "vite": "5.1.3",
