--- a/sandbox/storybook/package.json
+++ b/sandbox/storybook/package.json
@@ -13,21 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@storybook/addon-actions": "^7.6.16",
-    "@storybook/addon-essentials": "^7.6.16",
-    "@storybook/addon-interactions": "^7.6.16",
-    "@storybook/addon-links": "^7.6.16",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/react": "^7.6.16",
-    "@storybook/react-webpack5": "^7.6.16",
-    "babel-loader": "^9.1.3",
+    "@babel/core": "7.23.9",
+    "@storybook/addon-actions": "7.6.16",
+    "@storybook/addon-essentials": "7.6.16",
+    "@storybook/addon-interactions": "7.6.16",
+    "@storybook/addon-links": "7.6.16",
+    "@storybook/addon-styling": "1.3.7",
+    "@storybook/react": "7.6.16",
+    "@storybook/react-webpack5": "7.6.16",
+    "babel-loader": "9.1.3",
     "@pandacss/dev": "workspace:*",
-    "postcss": "^8.4.35",
-    "storybook": "^7.6.16"
+    "postcss": "8.4.35",
+    "storybook": "7.6.16"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   }
 }
