--- a/sandbox/svelte/package.json
+++ b/sandbox/svelte/package.json
@@ -17,19 +17,19 @@
   },
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
-    "@sveltejs/adapter-auto": "^3.1.1",
-    "@sveltejs/kit": "^2.5.0",
-    "autoprefixer": "^10.4.17",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.35",
-    "postcss-load-config": "^5.0.3",
-    "prettier-plugin-svelte": "^3.2.1",
-    "svelte": "^4.2.11",
-    "svelte-check": "^3.6.4",
-    "svelte-preprocess": "^5.1.3",
-    "tslib": "^2.6.2",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.3"
+    "@sveltejs/adapter-auto": "3.1.1",
+    "@sveltejs/kit": "2.5.0",
+    "autoprefixer": "10.4.17",
+    "eslint-plugin-svelte3": "4.0.0",
+    "postcss": "8.4.35",
+    "postcss-load-config": "5.0.3",
+    "prettier-plugin-svelte": "3.2.1",
+    "svelte": "4.2.11",
+    "svelte-check": "3.6.4",
+    "svelte-preprocess": "5.1.3",
+    "tslib": "2.6.2",
+    "typescript": "5.3.3",
+    "vite": "5.1.3"
   },
   "type": "module"
 }
