--- a/website/package.json
+++ b/website/package.json
@@ -33,9 +33,9 @@
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
     "@pandacss/postcss": "workspace:^",
-    "@types/react": "^18.2.55",
-    "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.35",
-    "prettier": "^2.8.8"
+    "@types/react": "18.2.55",
+    "autoprefixer": "10.4.17",
+    "postcss": "8.4.35",
+    "prettier": "2.8.8"
   }
 }
