fix: ark recipes

--- a/playground/package.json
+++ b/playground/package.json
@@ -19,6 +19,7 @@
     "viz": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@ark-ui/anatomy": "2.2.0",
     "@ark-ui/react": "2.1.1",
     "@monaco-editor/react": "4.6.0",
     "@pandacss/config": "workspace:*",
