chore: update deps (#2216)
* chore: update deps

* chore: fix versions

* fix: ark recipes

* fix: segment group

* fix: playground

* chore: update recipes

* test: skip solid for now

* chore: update

* fix: website

* chore: resolve playground

* docs: update

* fix: playground

* test: fix solid codegen

* docs: update

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -56,7 +56,7 @@
     "postcss.js"
   ],
   "dependencies": {
-    "@clack/prompts": "^0.6.3",
+    "@clack/prompts": "0.7.0",
     "@pandacss/config": "workspace:*",
     "@pandacss/logger": "workspace:*",
     "@pandacss/node": "workspace:*",
@@ -70,6 +70,6 @@
   "devDependencies": {
     "@types/update-notifier": "6.0.8",
     "kleur": "4.1.5",
-    "update-notifier": "6.0.2"
+    "update-notifier": "7.0.0"
   }
 }
