--- a/packages/extractor/package.json
+++ b/packages/extractor/package.json
@@ -42,7 +42,7 @@
   ],
   "dependencies": {
     "@pandacss/shared": "workspace:*",
-    "ts-evaluator": "^1.1.0",
-    "ts-morph": "19.0.0"
+    "ts-evaluator": "1.2.0",
+    "ts-morph": "20.0.0"
   }
 }
