--- a/sandbox/nuxt/package.json
+++ b/sandbox/nuxt/package.json
@@ -12,9 +12,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "postcss": "^8.4.35",
-    "nuxt": "^3.6.5",
-    "vue": "^3.3.3",
+    "postcss": "8.4.35",
+    "nuxt": "3.10.2",
+    "vue": "3.4.19",
     "@pandacss/dev": "workspace:*"
   }
 }
