--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "playground": "pnpm --filter=./playground",
     "build:playground": "pnpm --filter {./playground}... build",
-    "prepare": "husky install && pnpm build-fast",
+    "prepare": "husky && pnpm build-fast",
     "dev": "pnpm --parallel --filter=./packages/** dev",
     "build-fast": "pnpm -r --parallel --filter=./packages/** build-fast",
     "build": "pnpm -r --filter=./packages/** build",
@@ -34,31 +34,31 @@
   "author": "Segun Adebayo <joseshegs@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@changesets/changelog-github": "0.4.8",
-    "@changesets/cli": "2.26.2",
-    "chokidar": "^3.5.3",
-    "concurrently": "^8.2.0",
-    "cross-env": "^7.0.3",
-    "happy-dom": "^12.1.6",
-    "husky": "8.0.3",
-    "lint-staged": "13.2.3",
-    "mdx-local-link-checker": "^2.1.1",
-    "rimraf": "^5.0.1",
-    "ts-morph": "19.0.0",
-    "tsup": "8.0.1",
-    "tsx": "3.12.10",
+    "@changesets/changelog-github": "0.5.0",
+    "@changesets/cli": "2.27.1",
+    "chokidar": "3.6.0",
+    "concurrently": "8.2.2",
+    "cross-env": "7.0.3",
+    "happy-dom": "13.3.8",
+    "husky": "9.0.11",
+    "lint-staged": "15.2.2",
+    "mdx-local-link-checker": "2.1.1",
+    "rimraf": "5.0.5",
+    "ts-morph": "20.0.0",
+    "tsup": "8.0.2",
+    "tsx": "4.7.1",
     "typescript": "5.3.3",
     "vite-tsconfig-paths": "4.3.1",
-    "vitest": "1.2.2"
+    "vitest": "1.3.0"
   },
   "devDependencies": {
-    "@types/eslint": "8.44.1",
-    "@types/node": "20.4.5",
-    "@typescript-eslint/eslint-plugin": "6.2.1",
-    "@typescript-eslint/parser": "6.2.1",
-    "eslint": "^8.54.0",
-    "eslint-config-prettier": "^8.9.0",
-    "prettier": "^2.8.8"
+    "@types/eslint": "8.56.2",
+    "@types/node": "20.11.19",
+    "@typescript-eslint/eslint-plugin": "7.0.1",
+    "@typescript-eslint/parser": "7.0.1",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "prettier": "2.8.8"
   },
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
