--- a/packages/generator/package.json
+++ b/packages/generator/package.json
@@ -46,8 +46,8 @@
     "javascript-stringify": "2.1.0",
     "outdent": " ^0.8.0",
     "pluralize": "8.0.0",
-    "postcss": "^8.4.35",
-    "ts-pattern": "5.0.5"
+    "postcss": "8.4.35",
+    "ts-pattern": "5.0.8"
   },
   "devDependencies": {
     "@types/pluralize": "0.0.33"
