--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -46,34 +46,34 @@
     "@pandacss/shared": "workspace:*",
     "@pandacss/token-dictionary": "workspace:*",
     "@pandacss/types": "workspace:*",
-    "browserslist": "^4.22.2",
-    "chokidar": "^3.5.3",
-    "fast-glob": "^3.3.1",
-    "file-size": "^1.0.0",
-    "filesize": "^10.0.8",
-    "fs-extra": "11.1.1",
-    "glob-parent": "^6.0.2",
-    "is-glob": "^4.0.3",
+    "browserslist": "4.23.0",
+    "chokidar": "3.6.0",
+    "fast-glob": "3.3.2",
+    "file-size": "1.0.0",
+    "filesize": "10.1.0",
+    "fs-extra": "11.2.0",
+    "glob-parent": "6.0.2",
+    "is-glob": "4.0.3",
     "lodash.merge": "4.6.2",
     "look-it-up": "2.1.0",
     "outdent": " ^0.8.0",
-    "perfect-debounce": "^1.0.0",
+    "perfect-debounce": "1.0.0",
     "pkg-types": "1.0.3",
     "pluralize": "8.0.0",
-    "postcss": "^8.4.35",
-    "preferred-pm": "^3.0.3",
-    "prettier": "^2.8.8",
-    "ts-morph": "19.0.0",
-    "ts-pattern": "5.0.5",
-    "tsconfck": "^2.1.2"
+    "postcss": "8.4.35",
+    "preferred-pm": "3.1.2",
+    "prettier": "2.8.8",
+    "ts-morph": "20.0.0",
+    "ts-pattern": "5.0.8",
+    "tsconfck": "3.0.2"
   },
   "devDependencies": {
     "@types/fs-extra": "11.0.4",
-    "@types/glob-parent": "^5.1.1",
-    "@types/is-glob": "^4.0.2",
-    "@types/lodash.merge": "4.6.8",
+    "@types/glob-parent": "5.1.3",
+    "@types/is-glob": "4.0.4",
+    "@types/lodash.merge": "4.6.9",
     "@types/pluralize": "0.0.33",
-    "boxen": "^7.1.1",
-    "p-limit": "^4.0.0"
+    "boxen": "7.1.1",
+    "p-limit": "5.0.0"
   }
 }
