--- a/sandbox/gatsby-ts/package.json
+++ b/sandbox/gatsby-ts/package.json
@@ -17,15 +17,15 @@
   },
   "dependencies": {
     "@pandacss/dev": "workspace:*",
-    "gatsby": "^5.11.0",
-    "gatsby-plugin-postcss": "^6.11.0",
-    "postcss": "^8.4.35",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "gatsby": "5.13.3",
+    "gatsby-plugin-postcss": "6.13.1",
+    "postcss": "8.4.35",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "typescript": "^5.3.3"
+    "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
+    "typescript": "5.3.3"
   }
 }
