--- a/sandbox/preact-ts/package.json
+++ b/sandbox/preact-ts/package.json
@@ -11,12 +11,12 @@
     "css:dev": "PANDA_DEBUG=* panda -w"
   },
   "dependencies": {
-    "preact": "^10.16.0"
+    "preact": "10.19.5"
   },
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
-    "@preact/preset-vite": "2.5.0",
+    "@preact/preset-vite": "2.8.1",
     "typescript": "5.3.3",
-    "vite": "5.0.12"
+    "vite": "5.1.3"
   }
 }
