--- a/sandbox/qwik-ts/package.json
+++ b/sandbox/qwik-ts/package.json
@@ -21,13 +21,13 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/qwik": "^1.2.6",
-    "@builder.io/qwik-city": "^1.2.6",
+    "@builder.io/qwik": "1.4.5",
+    "@builder.io/qwik-city": "1.4.5",
     "@pandacss/dev": "workspace:*",
-    "eslint-plugin-qwik": "^1.2.6",
+    "eslint-plugin-qwik": "1.4.5",
     "typescript": "5.3.3",
-    "undici": "5.28.3",
-    "vite": "5.0.12",
+    "undici": "6.6.2",
+    "vite": "5.1.3",
     "vite-tsconfig-paths": "4.3.1"
   }
 }
