--- a/sandbox/runtime-perf/package.json
+++ b/sandbox/runtime-perf/package.json
@@ -13,8 +13,8 @@
     "visualize": "pnpm panda codegen --clean && vite-bundle-visualizer"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
@@ -22,10 +22,10 @@
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vitejs/plugin-react": "4.2.1",
-    "postcss": "^8.4.35",
-    "source-map-explorer": "^2.5.3",
+    "postcss": "8.4.35",
+    "source-map-explorer": "2.5.3",
     "typescript": "5.3.3",
-    "vite": "5.0.12",
+    "vite": "5.1.3",
     "vite-bundle-visualizer": "1.0.1"
   }
 }
