--- a/playground/package.json
+++ b/playground/package.json
@@ -63,5 +63,8 @@
     "eslint-config-next": "14.1.0",
     "raw-loader": "4.0.2",
     "tsx": "4.7.1"
-  }
+  },
+  "browserslist": [
+    "Chrome 118"
+  ]
 }
