--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -53,6 +53,15 @@
         "default": "./dist/resolve-ts-path-pattern.mjs"
       }
     },
+    "./utils": {
+      "source": "./src/utils-entry.ts",
+      "types": "./dist/utils-entry.d.ts",
+      "require": "./dist/utils-entry.js",
+      "import": {
+        "types": "./dist/utils-entry.d.mts",
+        "default": "./dist/utils-entry.mjs"
+      }
+    },
     "./package.json": "./package.json"
   },
   "scripts": {
