--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -19,8 +19,8 @@
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "tsup --tsconfig tsconfig.build.json src/index.ts --format=cjs,esm --shims --dts",
-    "build-fast": "tsup --tsconfig tsconfig.build.json src/index.ts --format=cjs,esm --shims --no-dts",
+    "build": "tsup --tsconfig tsconfig.build.json src/index.ts --format=cjs,esm --shims --dts --external=@pandacss/preset-base  --external=@pandacss/preset-panda",
+    "build-fast": "tsup --tsconfig tsconfig.build.json src/index.ts --format=cjs,esm --shims --no-dts --external=@pandacss/preset-base  --external=@pandacss/preset-panda",
     "dev": "pnpm build-fast --watch"
   },
   "files": [
