--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -35,6 +35,7 @@
     "csstype": "3.1.3",
     "microdiff": "1.3.2",
     "ncp": "2.0.0",
-    "pkg-types": "1.0.3"
+    "pkg-types": "1.0.3",
+    "ts-morph": "21.0.1"
   }
 }
