docs: multi themes & fix typings, always use theme.name as data attribue value

--- a/sandbox/waku-ts/tsconfig.json
+++ b/sandbox/waku-ts/tsconfig.json
@@ -10,10 +10,6 @@
     "exactOptionalPropertyTypes": true,
     "types": ["react/experimental"],
     "jsx": "react-jsx",
-    "baseUrl": ".",
-    "customConditions": ["source"],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "customConditions": ["source"]
   }
 }
