feat(playground): migrate to neon tech

--- a/playground/package.json
+++ b/playground/package.json
@@ -10,12 +10,11 @@
     "start": "next start",
     "lint": "next lint",
     "dev": "next dev",
-    "db:start": "docker-compose up -d",
-    "db:stop": "docker-compose down",
-    "db:push": "prisma db push --skip-generate",
+    "db:format": "prisma format",
     "db:generate": "prisma generate",
-    "db:reset": "prisma migrate reset",
+    "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:reset": "prisma db push --force-reset",
     "viz": "ANALYZE=true next build",
     "typecheck": "tsc --noEmit"
   },
