fix(sva): add splitVariantProps typings feat: add getVariantProps runtime fn for sva + config slot recipes fix: codegen typechecking tests

--- a/sandbox/codegen/tsconfig.json
+++ b/sandbox/codegen/tsconfig.json
@@ -16,10 +16,10 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "styled-system"],
+  "include": ["src", "styled-system", "__tests__"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
