fix: split codegen typecheck tests because of vitest current issue

--- a/sandbox/codegen/package.json
+++ b/sandbox/codegen/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "tsx ./cli.ts test",
+    "test:types": "tsx ./cli.ts test -t",
     "prepare": "tsx ./cli.ts codegen",
     "dev": "vite",
     "build": "tsc && vite build",
