chore: regenerate lock after rebase + fix next lint with react typings

--- a/website/package.json
+++ b/website/package.json
@@ -35,6 +35,7 @@
     "@pandacss/dev": "workspace:*",
     "@pandacss/postcss": "workspace:^",
     "@types/react": "18.2.55",
+    "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.35",
     "prettier": "3.2.5"
