--- a/.github/composite-actions/install/action.yml
+++ b/.github/composite-actions/install/action.yml
@@ -10,6 +10,7 @@ runs:
       uses: actions/setup-node@v3
       with:
         node-version: 18
+        registry-url: 'https://registry.npmjs.org'
         cache: 'pnpm'
 
     - name: Setup Git User
