--- a/sandbox/solid-ts/package.json
+++ b/sandbox/solid-ts/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
+    "prepare": "panda",
     "css": "PANDA_DEBUG=* panda",
     "css:dev": "PANDA_DEBUG=* panda -w"
   },
