--- a/sandbox/svelte/package.json
+++ b/sandbox/svelte/package.json
@@ -19,6 +19,7 @@
     "@pandacss/dev": "workspace:*",
     "@sveltejs/adapter-auto": "3.1.1",
     "@sveltejs/kit": "2.5.18",
+    "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "autoprefixer": "10.4.19",
     "eslint-plugin-svelte3": "4.0.0",
     "postcss": "8.4.38",
