wip custom conditions based on tsconfig

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,5 +2,6 @@ packages:
   - 'packages/**'
   - 'sandbox/*'
   - 'sandbox/component-lib/**'
+  - 'sandbox/custom-conditions/**'
   - 'playground'
   - 'website'
