--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "@typescript-eslint/parser": "7.0.1",
     "eslint": "8.56.0",
     "eslint-config-prettier": "9.1.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "vite-plugin-virtual": "^0.3.0"
   },
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
