--- a/packages/node/package.json
+++ b/packages/node/package.json
@@ -48,7 +48,7 @@
     "@pandacss/types": "workspace:*",
     "browserslist": "4.23.3",
     "chokidar": "4.0.3",
-    "fast-glob": "3.3.3",
+    "tinyglobby": "0.2.12",
     "fs-extra": "11.2.0",
     "glob-parent": "6.0.2",
     "is-glob": "4.0.3",
@@ -58,6 +58,7 @@
     "package-manager-detector": "0.1.0",
     "perfect-debounce": "1.0.0",
     "pkg-types": "1.0.3",
+    "picomatch": "4.0.2",
     "pluralize": "8.0.0",
     "postcss": "8.4.49",
     "prettier": "3.2.5",
@@ -66,6 +67,7 @@
     "tsconfck": "3.0.2"
   },
   "devDependencies": {
+    "@types/picomatch": "3.0.2",
     "@types/fs-extra": "11.0.4",
     "@types/glob-parent": "5.1.3",
     "@types/is-glob": "4.0.4",
