fix: studio composition styles

--- a/packages/astro-plugin-studio/package.json
+++ b/packages/astro-plugin-studio/package.json
@@ -37,6 +37,7 @@
     "dist"
   ],
   "dependencies": {
+    "@pandacss/core": "workspace:*",
     "@pandacss/node": "workspace:*",
     "javascript-stringify": "2.1.0"
   },
