--- a/packages/browser/tsconfig.json
+++ b/packages/browser/tsconfig.json
@@ -5,6 +5,6 @@
     "rootDir": "src",
     "lib": ["DOM", "ES2020"]
   },
-  "include": ["src"],
+  "include": ["src", "__tests__"],
   "exclude": ["node_modules", "dist"]
 }
