feat: expose as prop

--- a/packages/studio/tsconfig.json
+++ b/packages/studio/tsconfig.json
@@ -1,8 +1,24 @@
 {
-  "extends": "astro/tsconfigs/strict",
-  "include": ["src", "__tests__"],
+  "include": ["src", "__tests__", "astro.config.mjs"],
   "compilerOptions": {
+    "target": "ESNext",
+    "lib": ["ES2022"],
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "verbatimModuleSyntax": true,
+    "isolatedModules": true,
+    "noEmit": true,
     "jsx": "preserve",
+    "strict": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "exactOptionalPropertyTypes": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "allowJs": true,
     "customConditions": ["source"]
   }
 }
