refactor: ui and docs

--- a/website/package.json
+++ b/website/package.json
@@ -21,9 +21,9 @@
     "@pandacss/token-dictionary": "workspace:*",
     "bright": "0.8.6",
     "focus-visible": "5.2.1",
+    "fuse.js": "^7.1.0",
     "git-url-parse": "16.1.0",
     "intersection-observer": "0.12.2",
-    "match-sorter": "6.3.4",
     "next": "14.2.26",
     "next-seo": "6.6.0",
     "next-themes": "0.4.6",
@@ -39,8 +39,8 @@
   "devDependencies": {
     "@pandacss/dev": "workspace:*",
     "@pandacss/postcss": "workspace:^",
-    "@shikijs/transformers": "^3.12.2",
     "@shikijs/rehype": "^3.12.2",
+    "@shikijs/transformers": "^3.12.2",
     "@types/git-url-parse": "16.0.2",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
