--- a/packages/fixture/package.json
+++ b/packages/fixture/package.json
@@ -6,6 +6,7 @@
   "main": "src/index.ts",
   "types": "src/index.ts",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
     "@pandacss/config": "workspace:^",
     "@pandacss/core": "workspace:^",
