--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -17,6 +17,7 @@
     }
   },
   "author": "Segun Adebayo <joseshegs@gmail.com>",
+  "license": "MIT",
   "sideEffects": false,
   "homepage": "https://panda-css.com",
   "repository": {
