--- a/packages/postcss/package.json
+++ b/packages/postcss/package.json
@@ -6,6 +6,7 @@
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
+  "license": "MIT",
   "exports": {
     ".": {
       "source": "./src/index.ts",
