--- a/packages/preset-base/package.json
+++ b/packages/preset-base/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.1",
   "description": "The base preset for Panda CSS that contains the conditions and utilities",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
