--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -4,6 +4,7 @@
   "description": "The types for css panda",
   "main": "dist/index.d.ts",
   "author": "Segun Adebayo <joseshegs@gmail.com>",
+  "license": "MIT",
   "exports": {
     ".": {
       "source": "./src/index.ts",
