chore: bump deps

--- a/sandbox/waku-ts/package.json
+++ b/sandbox/waku-ts/package.json
@@ -9,9 +9,9 @@
     "start": "waku start --with-ssr"
   },
   "dependencies": {
-    "react": "19.1.1",
-    "react-dom": "19.1.1",
-    "react-server-dom-webpack": "18.3.0-canary-14fd9630e-20240213",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-server-dom-webpack": "19.2.0",
     "waku": "0.27.1"
   },
   "devDependencies": {
