--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,4 +1,7 @@
 {
   "extends": "../../tsconfig.build.json",
+  "compilerOptions": {
+    "types": ["node", "vitest/globals"]
+  },
   "include": ["src"]
 }
