feat: Panda MCP Server (#3358)
* chore: init

* refactor: use spec for mcp

* chore: update

* chore: update

* chore: update package json

* style: fix

* chore: add changeset

* fix: regression

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -60,6 +60,7 @@
     "@clack/prompts": "0.11.0",
     "@pandacss/config": "workspace:*",
     "@pandacss/logger": "workspace:*",
+    "@pandacss/mcp": "workspace:*",
     "@pandacss/node": "workspace:*",
     "@pandacss/postcss": "workspace:*",
     "@pandacss/preset-base": "workspace:*",
